add support for parameters in both rendering and parsing.