@@ -3,6 +3,7 @@ package io.sqm.core.internal;
 import io.sqm.core.OrderBy;
 import io.sqm.core.OrderItem;
 
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -11,8 +12,12 @@ import java.util.List;
  * @param items a list of order by items.
  */
 public record OrderByImpl(List<OrderItem> items) implements OrderBy {
-
+    /**
+     * Ensures items are unmodifiable.
+     *
+     * @param items a list of items.
+     */
     public OrderByImpl {
-        items = List.copyOf(items);
+        items = Collections.unmodifiableList(items);
     }
 }
